overflow fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,5 +9,5 @@
 body {
   font-family: 'Poppins', sans-serif;
   overflow-x: hidden;
-  letter-spacing: 0.025em;
+  letter-spacing: 0.035em;
 }
